--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "next": "13.5.6",
+    "nextra": "2.13.4",
+    "nextra-theme-docs": "2.13.4",
     "postcss": "8.4.31",
     "prettier": "2.8.4",
     "prettier-plugin-brace-style": "0.6.0",
